# aws-mfa

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  credentials.rs  main.rs  updater.rs
