[package]
name = "aws-mfa"
version = "0.1.2"
edition = "2024"
description = "AWS MFA CLI tool for refreshing session credentials"
license = "MIT OR Apache-2.0"

[[bin]]
name = "aws-mfa"
path = "src/main.rs"

[dependencies]
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
aws-sdk-sts = { version = "1.95.0", features = ["behavior-version-latest"] }
aws-smithy-types = "1.3.5"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
configparser = "3.1.0"
dirs = "6.0.0"
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env", "wrap_help"] }
env_logger = "0.11.8"
log = "0.4.29"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
